HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/DynamicUndefinedClassType/Expected.uv
//! Expected diagnostic metadata for the DynamicUndefinedClassType rejected-source specimen.

expectedDiagnostic("E-TYP-2509", "rule.14.WF-Dynamic-Err")
